After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 697526 - Click Help menu -> Document Not Found in yelp
Click Help menu -> Document Not Found in yelp
Status: RESOLVED FIXED
Product: rhythmbox
Classification: Other
Component: Documentation
2.99
Other Linux
: Normal normal
: ---
Assigned To: RhythmBox Maintainers
RhythmBox Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-04-08 01:56 UTC by sangu
Modified: 2013-04-09 23:05 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix broken help link (871 bytes, patch)
2013-04-08 03:58 UTC, Jeremy Bicha
none Details | Review
Fix broken help link (870 bytes, patch)
2013-04-08 04:16 UTC, Jeremy Bicha
committed Details | Review

Description sangu 2013-04-08 01:56:24 UTC
https://bugzilla.redhat.com/show_bug.cgi?id=949365

Description of problem:
Click Help menu  -> Document Not Found in yelp

Document Not Found
The URI ‘ghelp:rhythmbox’ does not point to a valid page.
Search for packages containing this document.

Version-Release number of selected component (if applicable):
2.99-1.fc19.x86_64

How reproducible:
always

Steps to Reproduce:
1. launch rhythmbox
2. click app menu 
3. click help 

---
After clicking All Documents in yelp, Rhythbox Music Player item shows up.
Comment 1 Jeremy Bicha 2013-04-08 03:58:20 UTC
Created attachment 240922 [details] [review]
Fix broken help link

This regression appeared with the GMenu conversion
Comment 2 Jeremy Bicha 2013-04-08 04:16:42 UTC
Created attachment 240923 [details] [review]
Fix broken help link

This regression appeared with the GMenu conversion
Comment 3 Jonathan Matthew 2013-04-09 23:02:40 UTC
Review of attachment 240923 [details] [review]:

oops, sorry about that.
Comment 4 Jeremy Bicha 2013-04-09 23:05:40 UTC
Attachment 240923 [details] pushed as 99888a5 - Fix broken help link