Fix broken help link

This regression appeared with the GMenu conversion

https://bugzilla.gnome.org/show_bug.cgi?id=697526